...
            .padding(16.dp)
    ) {
        Text(text = "缩放中心模式:", style = MaterialTheme.typography.titleMedium)

        Row(verticalAlignment = Alignment.CenterVertically) {
            RadioButton(
                modifier = Modifier.testTag("radio_zoom_center_gesture"),
                selected = zoomCenterMode == Constants.ZOOM_CENTER_GESTURE,
                onClick = {
                    zoomCenterMode = Constants.ZOOM_CENTER_GESTURE
                    mapView.getMapAsync { map ->
                        map.uiSettings.gestures.zoomCenterMode = zoomCenterMode
                    }
...
            )
            Text(text = "手势焦点 (gesture-center)")
        }

        Row(verticalAlignment = Alignment.CenterVertically) {
            RadioButton(
                modifier = Modifier.testTag("radio_zoom_center_screen"),
                selected = zoomCenterMode == Constants.ZOOM_CENTER_SCREEN,
                onClick = {
                    zoomCenterMode = Constants.ZOOM_CENTER_SCREEN
                    mapView.getMapAsync { map ->
                        map.uiSettings.gestures.zoomCenterMode = zoomCenterMode
                    }
...
