...
    val mapView = remember(cameraPosition) {
        val options = defaultDemoMapOptions(context).apply {
            camera(cameraPosition)
        }
        MapView(context, options).apply {
            onCreate(null)
            tag = "mapView"
            getMapAsync { map ->
                map.setStyle(StyleOption(Constants.DEFAULT_STYLE_ID), object : StyleStatusCallback {
                    override fun onStyleLoaded(style: Style?) {}

                    override fun onStyleRendered(style: Style?) {
                        isStyleRendered = true
...
